k8s/remote/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-app
spec:
  template:
    spec:
      containers:
        - name: cloud-app
          image: registry.digitalocean.com/cloud-lab/cloud-app:latest
          imagePullPolicy: Always
