k8s/remote/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-app
spec:
  rules:
    - host: cloud-app.129.212.140.160.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud-app
                port:
                  number: 8080
